same issue make activites selector visible

--- a/client/src/styles/ParkRecommenderForm.css
+++ b/client/src/styles/ParkRecommenderForm.css
@@ -1,7 +1,7 @@
 select {
     display: block;
     width: 100%;
-    height: 100%;
+    height: 200px;
     padding: 0.5rem;
     font-size: 1rem;
 }
